force-app/main/default/objects/Enrollment_Meeting__c/Enrollment_Meeting__c.object-meta.xml
<CustomObject>
    <description>Used for enrollment meetings conducted on 401(k) plans.</description>
    <label>Enrollment Meeting</label>
    <nameField>
        <displayFormat>EnrollMeeting-{0000}</displayFormat>
        <label>Enrollment Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>