force-app/main/default/objects/Enrollment_Meeting__c/fields/Auto_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enroll__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Auto Enroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>EACA</fullName>
            </value>
            <value>
                <fullName>QACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>