force-app/main/default/objects/Enrollment_Meeting__c/fields/Auto_Enrollment_Deferral_Escalation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment_Deferral_Escalation_Rate__c</fullName>
    <label>Auto-Enrollment Deferral/Escalation Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>4% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>5% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>6% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>7% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>8% Auto-Escalate</fullName>
            </value>
            <value>
                <fullName>3% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>4% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>5% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>6% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>7% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>8% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>9% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>10% Flat Deferral Rate</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>