force-app/main/default/objects/Enrollment_Meeting__c/fields/Census_and_Eligibility_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Census_and_Eligibility_Uploaded__c</fullName>
    <formula>Implementation__r.Census_and_Eligibility_Uploaded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Census and Eligibility Uploaded</label>
    <type>Date</type>
</CustomField>