force-app/main/default/objects/Enrollment_Meeting__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <formula>Plan__r.Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Location</label>
    <type>Text</type>
</CustomField>