force-app/main/default/objects/Enrollment_Meeting__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>Enrollment_Meeting_Contact__r.Phone</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>