force-app/main/default/objects/Enrollment_Meeting__c/fields/Deferral_Change_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Change_Frequency__c</fullName>
    <label>Deferral Change Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Per Pay Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>