force-app/main/default/objects/Enrollment_Meeting__c/fields/Discretionary_Match_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Notes__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Discretionary Match Notes</label>
    <type>TextArea</type>
</CustomField>