force-app/main/default/objects/Enrollment_Meeting__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year (1000 Hours)</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>90 Day</fullName>
                <isActive>false</isActive>
                <label>90 Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>