force-app/main/default/objects/Enrollment_Meeting__c/fields/Employee_Contribution_Percent__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contribution_Percent__c</fullName>
    <description>Contributing Employees / Eligible Employees</description>
    <formula>Number_of_employees_contributing__c /  Number_of_Eligible_Employees__c</formula>
    <inlineHelpText>Contributing Employees / Eligible Employees</inlineHelpText>
    <label>Employee Contribution Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>