force-app/main/default/objects/Enrollment_Meeting__c/fields/Employees_Balance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Employees_Balance_Percent__c</fullName>
    <description>Number of balances / Number of eligible employees</description>
    <formula>Number_of_employees_with_a_balance__c /  Number_of_Eligible_Employees__c</formula>
    <inlineHelpText>Number of balances / Number of eligible employees</inlineHelpText>
    <label>Employees Balance Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>