force-app/main/default/objects/Enrollment_Meeting__c/fields/Enroll_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Meeting_Notes__c</fullName>
    <label>Enroll Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>