force-app/main/default/objects/Enrollment_Meeting__c/fields/Enrollment_Meeting_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Meeting_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor to be included in the enrollment meeting communication</description>
    <label>Enrollment Meeting Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Meetings (Enrollment Meeting Advisor)</relationshipLabel>
    <relationshipName>Enrollment_Meetings3</relationshipName>
    <type>Lookup</type>
</CustomField>