force-app/main/default/objects/Enrollment_Meeting__c/fields/Enrollment_Meeting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Meeting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to coordinate meeting with</description>
    <inlineHelpText>Contact to coordinate meeting with</inlineHelpText>
    <label>Enrollment Meeting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Meetings (Enrollment Meeting Contact)</relationshipLabel>
    <relationshipName>Enrollment_Meetings2</relationshipName>
    <type>Lookup</type>
</CustomField>