force-app/main/default/objects/Enrollment_Meeting__c/fields/Expected_1st_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Expected_1st_Payroll__c</fullName>
    <formula>Implementation__r.Expected_1st_Payroll__c</formula>
    <label>Expected 1st Payroll</label>
    <type>Date</type>
</CustomField>