force-app/main/default/objects/Enrollment_Meeting__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implementation that is in progress when enrollment meeting is conducted. Only needs to be linked if the plan is in the implementation stage.</description>
    <inlineHelpText>Implementation that is in progress when enrollment meeting is conducted. Only needs to be linked if the plan is in the implementation stage.</inlineHelpText>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Enrollment Meetings</relationshipLabel>
    <relationshipName>Enrollment_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>