force-app/main/default/objects/Enrollment_Meeting__c/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Loans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>