force-app/main/default/objects/Enrollment_Meeting__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Date meeting took place</description>
    <inlineHelpText>Date meeting took place</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>