force-app/main/default/objects/Enrollment_Meeting__c/fields/Meeting_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recording_URL__c</fullName>
    <label>Meeting Recording URL</label>
    <type>Url</type>
</CustomField>