force-app/main/default/objects/Enrollment_Meeting__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <description>Time meeting started</description>
    <inlineHelpText>Time meeting started</inlineHelpText>
    <label>Meeting Time</label>
    <type>Time</type>
</CustomField>