force-app/main/default/objects/Enrollment_Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complete meeting</fullName>
            </value>
            <value>
                <fullName>Condensed deck PDF sent to PS/Advisor</fullName>
            </value>
            <value>
                <fullName>Enrollment Kit only</fullName>
                <isActive>false</isActive>
                <label>Enrollment Kit only</label>
            </value>
            <value>
                <fullName>Platform demo only</fullName>
            </value>
            <value>
                <fullName>Platform Demo recording sent to employees</fullName>
            </value>
            <value>
                <fullName>Recording sent to employees</fullName>
            </value>
            <value>
                <fullName>Tailored deck</fullName>
                <isActive>false</isActive>
                <label>Tailored deck</label>
            </value>
            <value>
                <fullName>Training advisor to run meeting</fullName>
            </value>
            <value>
                <fullName>Train_Sponsor_Recording_to_Employees</fullName>
                <label>Train sponsor w recording to employees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>