force-app/main/default/objects/Enrollment_Meeting__c/fields/Number_of_Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eligible_Employees__c</fullName>
    <label>Number of Eligible Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>