force-app/main/default/objects/Enrollment_Meeting__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Total number of employees on census (Eligible or Ineligible - Active or Terminated)</description>
    <inlineHelpText>Total number of employees on census (Eligible or Ineligible - Active or Terminated)</inlineHelpText>
    <label>Number of Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>