force-app/main/default/objects/Enrollment_Meeting__c/fields/Number_of_employees_contributing__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees_contributing__c</fullName>
    <label>Number of employees contributing</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>