force-app/main/default/objects/Enrollment_Meeting__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan the enrollment meeting is for</description>
    <inlineHelpText>Plan the enrollment meeting is for</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Enrollment Meetings</relationshipLabel>
    <relationshipName>Enrollment_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>