force-app/main/default/objects/Enrollment_Meeting__c/fields/Plan_Age_at_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Age_at_Meeting_Date__c</fullName>
    <description>Plan age at date of the meeting</description>
    <formula>(Meeting_Date__c -  Plan__r.Plan_Sold_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Plan age at date of the meeting</inlineHelpText>
    <label>Plan Age (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>