force-app/main/default/objects/Enrollment_Meeting__c/fields/Plan_Sponsor_Tour_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Tour_Scheduled__c</fullName>
    <formula>Implementation__r.Plan_Sponsor_Tour_Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Sponsor Tour Scheduled</label>
    <type>Date</type>
</CustomField>