force-app/main/default/objects/Enrollment_Meeting__c/fields/Profit_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Profit Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
            <value>
                <fullName>Permitted Disparity</fullName>
            </value>
            <value>
                <fullName>New Comparability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>