force-app/main/default/objects/Enrollment_Meeting__c/fields/QACA_Safe_Harbor_Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>QACA_Safe_Harbor_Vesting_Schedule__c</fullName>
    <label>QACA Safe Harbor Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>2 Year Cliff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>