force-app/main/default/objects/Enrollment_Meeting__c/fields/Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor__c</fullName>
    <description>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</description>
    <inlineHelpText>Copied from Plan or Implementation when Enroll Meeting created.   Can be edited until Enrollment Meeting completed and then is locked.</inlineHelpText>
    <label>Safe Harbor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>4% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>5% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>6% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>Basic Match (100% of 1st 3%+50% of next 2%)</fullName>
            </value>
            <value>
                <fullName>3% Non-Elective Contribution (NEC)</fullName>
            </value>
            <value>
                <fullName>QACA Basic Match (100% up to 1%, 50% up to 6%)</fullName>
            </value>
            <value>
                <fullName>3.5% QACA Match</fullName>
            </value>
            <value>
                <fullName>4% QACA Match</fullName>
            </value>
            <value>
                <fullName>5% QACA Match</fullName>
            </value>
            <value>
                <fullName>6% QACA Match</fullName>
            </value>
            <value>
                <fullName>3% QACA non-elective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>