force-app/main/default/objects/Enrollment_Meeting__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <description>From Plan object.   If not completed in Plan, then from Implementation</description>
    <inlineHelpText>From Plan object.   If not completed in Plan, then from Implementation</inlineHelpText>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>RKO</fullName>
            </value>
            <value>
                <fullName>RK Only</fullName>
            </value>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Mega Roth Single(k)</fullName>
            </value>
            <value>
                <fullName>Legacy Saver(k)</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>